Fix icon alignment in dashboard

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -19,7 +19,7 @@ body {
     img.default-piwik-logo {
         height: 21px;
         width: 82px;
-        margin-top: 14px;
+        margin-top: 4px;
     }
 }
 
